# grid-arena

./: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
data/dqn_double/: metrics.json
data/dqn_double/trajectories-1337/2025-12-04_16-11-02/0/: data.npz  metadata.json
data/dqn_double/trajectories-1337/2025-12-04_16-11-02/1/: data.npz  metadata.json
data/dqn_double/trajectories-1337/2025-12-04_16-11-02/10/: data.npz  metadata.json
data/dqn_single/: metrics.json
data/heuristic_double/: metrics.json
data/heuristic_single/: metrics.json
data/random_double/: metrics.json
data/random_single/: metrics.json
dqn/: metrics.json
dqn/checkpoints/: model_10.pt  model_100.pt  model_15.pt  model_20.pt  model_25.pt  model_30.pt  model_35.pt  model_40.pt  model_45.pt  model_5.pt  model_50.pt  model_55.pt  model_60.pt  model_65.pt  model_70.pt  model_75.pt  model_80.pt  model_85.pt  model_90.pt  model_95.pt
scripts/: analyze.py  animate.bat  animate.py  config.py  evaluate.py  plot_evaluation.py  plot_training.py  run.bat  train.py
src/arena/: constants.py  render.py  run.py  schema.py
src/arena/entities/: __init__.py  trajectory.py
src/arena/environment/: __init__.py  arena.py  player.py  timestep.py  utilities.py
src/arena/environment/mechanics/: combat.py  movement.py  observations.py  rewards.py
src/arena/policies/: __init__.py  aggressive.py  coward.py  custom.py  policy.py  random.py  scanner.py  zombie.py
src/arena/utilities/: __init__.py  loader.py  logging.py  renderer.py  runner.py  saver.py
(+112981 files in other folders)
